# nextjs-django-stack

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  Taskfile.yml  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: urls.py  views.py
backend/core/tests/: conftest.py  test_api.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .dockerignore  .eslintrc.json  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  whyDidYouRender.js
frontend/app/: WhyDidYouRenderSetup.tsx  layout.tsx  page.tsx
frontend/app/components/: ErrorBoundary.tsx
frontend/app/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/app/hooks/: useApi.ts
frontend/utils/: whyDidYouRender.js
