[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django backend for Next.js stack"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = ">=4.2"
djangorestframework = "*"
django-filter = "*"
django-axes = "*"
django-redis = "*"
python-dotenv = "*"
django-debug-toolbar = ">=4.3.0"
psycopg2-binary = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
