[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django backend for fullstack app"
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false  # disables package mode for apps
# Disable package mode since this is an app, not a library
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
